
----

Text:

Major releases, updates, and improvements.

Incremental changes are listed in the project’s [commit history](https://github.com/splorp/newton-glossary/commits/master).

Recently added terms and sources can be found on the [latest additions](/latest) page.

### _$v

Terms: _$t
Sources: _$s

#### Summary of changes:

+ 

### 3.0.2

27 June 2022

Terms: 1,293
Sources: 136

#### Summary of changes:

+ Added 4 new terms
+ Added 1 new source
+ Updated and expanded several existing entries
+ Updated [Kirby](https://getkirby.com/) to version [3.7.0](https://github.com/getkirby/kirby/releases/tag/3.7.0)
+ Updated [Kirby Paperback Export](https://github.com/splorp/kirby-paperback-export) plugin to version [2.0.1](https://github.com/splorp/kirby-paperback-export/releases/tag/2.0.1)

### 3.0.1

12 May 2022

Terms: 1,289
Sources: 135

#### Summary of changes:

+ Updated [Kirby](https://getkirby.com/) to version [3.6.6](https://github.com/getkirby/kirby/releases/tag/3.6.6)

### 3.0.0

11 May 2022

Terms: 1,289
Sources: 135

#### Summary of changes:

+ Updated [Kirby](https://getkirby.com/) to version [3.6.5](https://github.com/getkirby/kirby/releases/tag/3.6.5)
+ Updated [Alphabetise](https://github.com/shoesforindustry/kirby-plugins-alphabetise) plugin to version 0.1.1
+ Updated [Cachebuster](https://github.com/schnti/kirby3-cachebuster) plugin with <a href="https://github.com/schnti">Timo Schneider’s</a> Kirby 3 version
+ Updated [Kirby Meta Tags](https://github.com/pedroborges/kirby-meta-tags) plugin to version [2.1.0](https://github.com/pedroborges/kirby-meta-tags/releases/tag/v2.1.0)
+ Updated [Kirby Paperback Export](https://github.com/splorp/kirby-paperback-export) plugin to version [2.0.0](https://github.com/splorp/kirby-paperback-export/releases/tag/2.0.0)
+ Removed [Kirby GA](https://github.com/jenstornell/kirby-ga) plugin because Google