@@ -68,6 +68,7 @@ return [
 	],
 	'schnti.cachebuster.active' => false,
 	'splorp.paperback-export.prefix' => '@@TOC ',
+	'splorp.paperback-export.fields' => ['source' => 'related'],
 	'splorp.paperback-export.includeUnlisted' => true,
 	'splorp.paperback-export.includeChildren' => ['terms'],
 	'splorp.paperback-export.excludeTemplate' => [],
