@@ -4,7 +4,7 @@
 	"keywords": ["kirby3", "kirby-cms", "kirby-plugin", "paperback-book-maker", "newton-book", "newton-os"],
 	"homepage": "https://github.com/splorp/kirby-paperback-export",
 	"type": "kirby-plugin",
-	"version": "2.0.3",
+	"version": "2.0.4",
 	"license": "MIT",
 	"authors": [
 		{
